--- a/rsc/Dockerfile.base
+++ b/rsc/Dockerfile.base
@@ -16,6 +16,7 @@ RUN apt-get update -q && \
     apt-get upgrade -q -y && \
     apt-get install -q -y --no-install-recommends \
 		brotli \
+		bubblewrap \
 		build-essential \
 		ca-certificates \
 		curl \
