--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -67,3 +67,7 @@ set -ag terminal-overrides ",xterm-256color:Tc"
 # Load either hostname specific or OS specific configurations.
 if "test -f ~/.config/tmux/${UNAME}.conf" "source ~/.config/tmux/${UNAME}.conf"
 if "test -f ~/.config/tmux/${HOSTNAME}.conf" "source ~/.config/tmux/${HOSTNAME}.conf"
+
+# 2025-12-09 Testing
+# https://github.com/tmux/tmux/wiki/Clipboard
+set -s set-clipboard off
