Migrate git-squash into a python script
This will enable me to use ask to make a better commit message.

--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -157,7 +157,8 @@
 
 
 [include]
-	path = squash.ini
+	; Now implemented as git-squash. Will remove soon:
+	; path = squash.ini
 	path = fourwaysmerge.ini
 
 ; Add user.name and user.email here.
