Move git-rb and git-squash to https://github.com/maruel/git-maruel

--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -157,7 +157,7 @@
 
 
 [include]
-	; Now implemented as git-squash. Will remove soon:
+	; Now implemented as git-squash at https://github.com/git-maruel. Will remove soon:
 	; path = squash.ini
 	path = fourwaysmerge.ini
 
