--- a/configs/.config/git/squash.ini
+++ b/configs/.config/git/squash.ini
@@ -1,6 +1,8 @@
 ; Copyright 2025 Marc-Antoine Ruel
 ; https://github.com/maruel/bin_pub
 ;
+; Now implemented as git-squash at https://github.com/git-maruel. Will remove soon.
+;
 ; Configures git to a "rebase linearized history flow" where "one PR/CL equals one commit".
 ; This is in Chromium, Go and other projects that aims towards a linear commit history.
 ;
