Add rebase back

--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -66,6 +66,12 @@
 
 [branch]
 	sort = -committerdate
+	autosetupmerge = always
+	autosetuprebase = always
+	sort = -committerdate
+
+[pull]
+	rebase = true
 
 
 ; My aliases.
