Refine tmux status line formatting

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -44,8 +44,8 @@ set-option -g status-right-length 43
 set-option -g status-right "#[fg=#401010]#(print_stats)#[fg=blue]#{=-3:host_short}#[fg=green,bg=black]%H:%M"
 set-option -g window-status-activity-style none
 set-option -g window-status-current-style bg=blue
-set-option -g window-status-current-format "#[fg=#ffffff,bg=#000088]#{window_index}#{=20:pane_title}"
-set-option -g window-status-format "#{window_index}#{=10:pane_title}#[fg=red]#{window_flags}"
+set-option -g window-status-current-format "#[fg=yellow,bold,bg=#000088]#{window_index}#[fg=#ffffff,nobold]:#{=10:pane_title}"
+set-option -g window-status-format "#[fg=cyan,bold]#{window_index}#[fg=default,nobold]:#{=10:pane_title}#[fg=red]#{window_flags}"
 set-option -g window-status-separator "  "
 
 # Alerts, mostly for IRC and know when slow processes (like running presubmit
